[gd_scene load_steps=15 format=2]

[ext_resource path="res://Entities/Enemies/Wizard/Idle.png" type="Texture" id=1]
[ext_resource path="res://Entities/Enemies/EnemyHurtbox.tscn" type="PackedScene" id=2]
[ext_resource path="res://Entities/Enemies/Wizard/Wizard.gd" type="Script" id=3]
[ext_resource path="res://Entities/Enemies/Stats.tscn" type="PackedScene" id=4]
[ext_resource path="res://Entities/Enemies/EffectsAnimation.tscn" type="PackedScene" id=5]
[ext_resource path="res://Entities/Enemies/Wizard/EffectFSM.gd" type="Script" id=6]
[ext_resource path="res://Entities/Hitbox.tscn" type="PackedScene" id=7]
[ext_resource path="res://Entities/Enemies/Wizard/Teleport.gd" type="Script" id=8]
[ext_resource path="res://Entities/Enemies/Wizard/bullet.png" type="Texture" id=9]
[ext_resource path="res://Entities/Enemies/Wizard/TP.gd" type="Script" id=10]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 36.3867, 43 )

[sub_resource type="Animation" id=2]
resource_name = "idle"
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4 ]
}

[sub_resource type="CapsuleShape2D" id=3]
radius = 37.0

[sub_resource type="CapsuleShape2D" id=4]
radius = 38.0
height = 174.0

[node name="Wizard" type="KinematicBody2D"]
collision_layer = 4
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -106, -95 )
texture = ExtResource( 1 )
centered = false
hframes = 6

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -1, 3 )
shape = SubResource( 1 )

[node name="Stats" parent="." instance=ExtResource( 4 )]
max_health = 100

[node name="EffectFSM" type="Node" parent="."]
script = ExtResource( 6 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/idle = SubResource( 2 )

[node name="EnemyHurtbox" parent="." instance=ExtResource( 2 )]
effected_by = [ true, true, true, true, true ]
effect_fsm_path = NodePath("../EffectFSM")

[node name="CollisionShape2D" parent="EnemyHurtbox" index="0"]
position = Vector2( 1, 0 )
shape = SubResource( 3 )

[node name="bullet_spawn" type="Position2D" parent="."]
position = Vector2( 34, -8 )

[node name="EffectsAnimation" parent="." instance=ExtResource( 5 )]

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[node name="Hitbox" parent="." instance=ExtResource( 7 )]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" parent="Hitbox" index="0"]
rotation = 1.5708
shape = SubResource( 4 )

[node name="Teleport" type="Node2D" parent="."]
script = ExtResource( 8 )

[node name="TP1" type="Position2D" parent="Teleport"]
script = ExtResource( 10 )
direction = 1

[node name="Sprite" type="Sprite" parent="Teleport/TP1"]
scale = Vector2( 0.05, 0.05 )
texture = ExtResource( 9 )

[node name="TP2" type="Position2D" parent="Teleport"]
script = ExtResource( 10 )
direction = 1

[node name="Sprite" type="Sprite" parent="Teleport/TP2"]
scale = Vector2( 0.05, 0.05 )
texture = ExtResource( 9 )

[node name="TP3" type="Position2D" parent="Teleport"]
script = ExtResource( 10 )
direction = -1

[node name="Sprite" type="Sprite" parent="Teleport/TP3"]
scale = Vector2( 0.05, 0.05 )
texture = ExtResource( 9 )

[node name="TpTimer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true
autostart = true
[connection signal="immobilized" from="Stats" to="." method="_on_Stats_immobilized"]
[connection signal="no_health" from="Stats" to="." method="_on_Stats_no_health"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]

[editable path="EnemyHurtbox"]

[editable path="Hitbox"]
